--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -10,7 +10,7 @@
     <string name="toppings">トッピング</string>
 
     <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
-    <string name="whipped_cream">ウイップクリーム</string>
+    <string name="whipped_cream">生クリーム</string>
 
     <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
     <string name="chocolate">チョコレート</string>
@@ -34,13 +34,13 @@
       Whipped cream topping for the order summary. It will be shown in the format of
       "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
     -->
-    <string name="order_summary_whipped_cream">ウイップクリーム追加? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
+    <string name="order_summary_whipped_cream">生クリームあり <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
 
     <!--
       Chocolate topping for the order summary. It will be shown in the format of
       "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
     -->
-    <string name="order_summary_chocolate">チョコレート追加? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
+    <string name="order_summary_chocolate">チョコレートあり <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
 
     <!--
       Quantity of coffee cups for the order summary. It will be shown in the format of
